[package]
name = "muzzman-lib"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["macros"]

[profile.dev]
panic = 'unwind'
[profile.release]
panic = 'unwind'
debug = false

[dependencies]
rand = "0.8.5"
http = "0.2.8"
get_ref = {path = "../../get_ref"}
url = "2.3.1"
libloading = "0.7.4"
muzzman-lib-macros = {path = "macros"}
