[package]
name = "muzzman-lib"
description = "Modulabile Download manager"
version = "0.3.2"
edition = "2021"
authors = ["konkitoman"]
repository = "https://github.com/ManStudio/MuzzMan-Lib"
license = "GPL-3.0"
keywords = ["download", "upload"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[workspace]
members = ["macros"]

[profile.dev]
panic = 'unwind'
[profile.release]
panic = 'unwind'
debug = false

[dependencies]
rand = "0.8.5"
get_ref = "0.1.0"
libloading = "0.7.4"
muzzman-lib-macros = "0.1.3"
serde = {version = "1.0.152", features = ["derive", "std", "rc", "alloc"]}
bytes-kman = "0.1.18"
