[package]
name = "muzzman-lib"
description = "Modulabile Download manager"
version = "0.3.5"
edition = "2021"
authors = ["konkitoman"]
repository = "https://github.com/ManStudio/MuzzMan-Lib"
license = "MPL-2.0"
keywords = ["download", "upload"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[workspace]
members = ["macros"]

[profile.dev]
panic = 'unwind'
[profile.release]
panic = 'unwind'
debug = false

[target.'cfg(target_os = "windows")'.dependencies]
dirs = "4.0.0"
[target.'cfg(target_os = "linux")'.dependencies]
dirs = "4.0.0"

[dependencies]
rand = "0.8.5"
get_ref = "0.1.0"
libloading = "0.7.4"
muzzman-lib-macros = {path = "./macros"}
# muzzman-lib-macros = "0.1.3"
serde = {version = "1.0.152", features = ["derive", "std", "rc", "alloc"]}
bytes-kman = "0.3"
log = { version = "0.4.17", features = ["std"] }
once_cell = "1.17.1"
