[package]
name = "muzzman-lib-macros"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.47"
quote = {version = "1.0.21"}
syn = {version = "1.0.103", features = ["derive", "full", "quote"]}
