[package]
name = "muzzman-lib-macros"
description = "MuzzManLib Macros"
version = "0.1.3"
edition = "2021"
authors = ["konkitoman"]
repository = "https://github.com/ManStudio/MuzzMan-Lib"
license = "GPL-3.0"
keywords = ["macros"]

[lib]
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.47"
quote = {version = "1.0.21"}
syn = {version = "1.0.103", features = ["derive", "full", "quote"]}
